cursor change, useGesture change to onClick. fixed card flip on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,7 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-  cursor: url("https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png")
-      39 39,
-    auto;
-}
+ }
 
 .menu-button-container {
   position: relative; /* Position the button in the top-left */
